basic junit test.